// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BrailleChart > handles downtrend 1`] = `
" [38;2;85;85;85m₹200.00[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⢄[0m[38;2;0;212;255m⣀[0m               
 [38;2;85;85;85m₹162.50[0m       [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠢[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⡀[0m         
 [38;2;85;85;85m₹125.00[0m            [38;2;0;212;255m⠈[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m
        [38;2;85;85;85m──────────────────────[0m"
`;

exports[`BrailleChart > handles flat line (all same value) 1`] = `
" [38;2;85;85;85m₹100.00[0m            
 [38;2;85;85;85m₹100.00[0m            
 [38;2;85;85;85m₹100.00[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m
        [38;2;85;85;85m────────────[0m"
`;

exports[`BrailleChart > handles uptrend 1`] = `
" [38;2;85;85;85m₹200.00[0m                [38;2;0;212;255m⢀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m
 [38;2;85;85;85m₹150.00[0m          [38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠁[0m     
 [38;2;85;85;85m₹100.00[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⡠[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠉[0m            
        [38;2;85;85;85m──────────────────────[0m"
`;

exports[`BrailleChart > renders basic chart 1`] = `
" [38;2;85;85;85m₹184.62[0m              [38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⡀[0m         
                   [38;2;0;212;255m⢀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠊[0m        [38;2;0;212;255m⠈[0m[38;2;0;212;255m⠢[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⢄[0m[38;2;0;212;255m⣀[0m  [38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m
 [38;2;85;85;85m₹167.31[0m    [38;2;0;212;255m⡠[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⣀[0m  [38;2;0;212;255m⢀[0m[38;2;0;212;255m⡰[0m[38;2;0;212;255m⠁[0m               [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠉[0m   
 [38;2;85;85;85m₹150.00[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m   [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠁[0m                      
        [38;2;85;85;85m────────────────────────────────[0m"
`;

exports[`BrailleChart > renders in bloomberg theme 1`] = `
" [38;2;85;85;85m₹184.79[0m         [38;2;255;140;0m⡠[0m[38;2;255;140;0m⠤[0m[38;2;255;140;0m⠤[0m[38;2;255;140;0m⠒[0m[38;2;255;140;0m⠉[0m[38;2;255;140;0m⠒[0m[38;2;255;140;0m⢄[0m      
 [38;2;85;85;85m₹167.40[0m   [38;2;255;140;0m⢀[0m   [38;2;255;140;0m⡠[0m[38;2;255;140;0m⠊[0m       [38;2;255;140;0m⠉[0m[38;2;255;140;0m⠒[0m[38;2;255;140;0m⠢[0m[38;2;255;140;0m⠤[0m[38;2;255;140;0m⠒[0m[38;2;255;140;0m⠉[0m
 [38;2;85;85;85m₹150.00[0m[38;2;255;140;0m⣀[0m[38;2;255;140;0m⠤[0m[38;2;255;140;0m⠊[0m[38;2;255;140;0m⠁[0m[38;2;255;140;0m⠉[0m[38;2;255;140;0m⠒[0m[38;2;255;140;0m⠊[0m               
        [38;2;85;85;85m──────────────────────[0m"
`;

exports[`BrailleChart > renders in monochrome theme 1`] = `
" [38;2;68;68;68m₹184.79[0m         [38;2;255;255;255m⡠[0m[38;2;255;255;255m⠤[0m[38;2;255;255;255m⠤[0m[38;2;255;255;255m⠒[0m[38;2;255;255;255m⠉[0m[38;2;255;255;255m⠒[0m[38;2;255;255;255m⢄[0m      
 [38;2;68;68;68m₹167.40[0m   [38;2;255;255;255m⢀[0m   [38;2;255;255;255m⡠[0m[38;2;255;255;255m⠊[0m       [38;2;255;255;255m⠉[0m[38;2;255;255;255m⠒[0m[38;2;255;255;255m⠢[0m[38;2;255;255;255m⠤[0m[38;2;255;255;255m⠒[0m[38;2;255;255;255m⠉[0m
 [38;2;68;68;68m₹150.00[0m[38;2;255;255;255m⣀[0m[38;2;255;255;255m⠤[0m[38;2;255;255;255m⠊[0m[38;2;255;255;255m⠁[0m[38;2;255;255;255m⠉[0m[38;2;255;255;255m⠒[0m[38;2;255;255;255m⠊[0m               
        [38;2;68;68;68m──────────────────────[0m"
`;

exports[`BrailleChart > renders with default options 1`] = `
" [38;2;85;85;85m₹184.97[0m                        [38;2;0;212;255m⢀[0m   [38;2;0;212;255m⢀[0m[38;2;0;212;255m⡠[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⢄[0m                 
                             [38;2;0;212;255m⢀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠁[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠁[0m      [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠢[0m[38;2;0;212;255m⡀[0m              
                           [38;2;0;212;255m⡠[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠁[0m               [38;2;0;212;255m⠈[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⢄[0m[38;2;0;212;255m⣀[0m   [38;2;0;212;255m⢀[0m[38;2;0;212;255m⡠[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m
 [38;2;85;85;85m₹167.49[0m        [38;2;0;212;255m⣀[0m        [38;2;0;212;255m⡠[0m[38;2;0;212;255m⠊[0m                         [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠁[0m    
            [38;2;0;212;255m⢀[0m[38;2;0;212;255m⡠[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠉[0m [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⡀[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠊[0m                                   
 [38;2;85;85;85m₹150.00[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠁[0m        [38;2;0;212;255m⠈[0m                                      
        [38;2;85;85;85m────────────────────────────────────────────────────[0m"
`;

exports[`BrailleChart > renders with label 1`] = `
" [38;2;85;85;85m₹184.62[0m             [38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠢[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠢[0m[38;2;0;212;255m⢄[0m         
 [38;2;85;85;85m₹167.31[0m     [38;2;0;212;255m⡀[0m    [38;2;0;212;255m⢀[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠊[0m          [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠉[0m
 [38;2;85;85;85m₹150.00[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠈[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠁[0m                     
        [38;2;85;85;85m────────────────────────────────[0m
        [38;2;0;212;255m6M WEEKLY[0m"
`;

exports[`BrailleChart > renders with volume overlay 1`] = `
" [38;2;85;85;85m₹184.62[0m              [38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⡀[0m         
                   [38;2;0;212;255m⢀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠊[0m        [38;2;0;212;255m⠈[0m[38;2;0;212;255m⠢[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⢄[0m[38;2;0;212;255m⣀[0m  [38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m
 [38;2;85;85;85m₹167.31[0m    [38;2;0;212;255m⡠[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⣀[0m  [38;2;0;212;255m⢀[0m[38;2;0;212;255m⡰[0m[38;2;0;212;255m⠁[0m               [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠉[0m   
 [38;2;85;85;85m₹150.00[0m[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m   [38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠁[0m                      
        [38;2;85;85;85m────────────────────────────────[0m
     [38;2;85;85;85mVol[0m[38;2;85;85;85m▒▓▓▒▓██████▓▓▓▓▓██████▓▓▓▓▒▓▓▓██[0m"
`;

exports[`BrailleChart > renders without axis 1`] = `
"            [38;2;0;212;255m⢀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⡀[0m        
    [38;2;0;212;255m⢀[0m[38;2;0;212;255m⡀[0m    [38;2;0;212;255m⡠[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠁[0m        [38;2;0;212;255m⠈[0m[38;2;0;212;255m⠉[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠢[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠉[0m
[38;2;0;212;255m⣀[0m[38;2;0;212;255m⠤[0m[38;2;0;212;255m⠔[0m[38;2;0;212;255m⠊[0m[38;2;0;212;255m⠁[0m[38;2;0;212;255m⠈[0m[38;2;0;212;255m⠑[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠒[0m[38;2;0;212;255m⠉[0m                    
[38;2;85;85;85m──────────────────────────────[0m"
`;
